@@ -1,6 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '3.1.2'
-	id 'io.spring.dependency-management' version '1.1.2'
+	id 'org.springframework.boot' version '3.2.2'
+	id 'io.spring.dependency-management' version '1.1.4'
 	id 'java'
 	id 'war'
 	id 'jacoco'
@@ -11,10 +11,12 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	jcenter()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.springframework.session:spring-session-core'
@@ -43,5 +45,6 @@ jacocoTestReport {
 }
 
 tasks.named('test') {
+	jvmArgs = ["-XX:+EnableDynamicAgentLoading"]
 	useJUnitPlatform()
 }
